# zvec-rs

./: CHANGELOG.md  Cargo.toml  PUBLISHING.md  README.md  SECURITY.md  build.rs
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  ci.yml  codeql.yml  release.yml  scorecard.yml  source-build.yml  upstream-track.yml
examples/: basic.rs  derive.rs  hybrid_search.rs  json_ingest.rs  semantic_search.rs  version.rs
scripts/: build-zvec.sh  bump-zvec-pin.sh
src/: async_collection.rs  builder.rs  collection.rs  config.rs  doc.rs  error.rs  ffi_util.rs  from_doc.rs  hybrid.rs  index_params.rs  into_doc.rs  lib.rs  options.rs  query.rs  query_params.rs  rerank.rs  schema.rs  serde_json_bridge.rs  stats.rs  sys.rs  types.rs  version.rs
tests/: integration.rs
zvec-derive/: Cargo.toml  README.md
zvec-derive/src/: lib.rs
